--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "flapper-news",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "mon-start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
